--- a/src/Components/Shop/Shop.css
+++ b/src/Components/Shop/Shop.css
@@ -11,6 +11,18 @@
   margin: 100px 50px;
 }
 
+.pagination button {
+  margin-right: 10px;
+  background-color: white;
+  border: 1px solid orange;
+  border-radius: 2px;
+}
+
+.pagination .selected {
+  background-color: orange;
+  color: white;
+}
+
 @media only screen and (max-width: 1100px) {
   .products-container {
     grid-template-columns: repeat(2, 1fr);
